kind of fixed image for solution section but still need to make it look good on mobile

--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -107,6 +107,11 @@ section {
 	color: black;
 }
 
+.right > img {
+	background-color: blue;
+	max-height:60vh;
+}
+
 .buttons-solution {
 	padding-top: 50px;
 }
